Fix clipping for curved border svg

--- a/src/app/components/hero/component.css
+++ b/src/app/components/hero/component.css
@@ -5,5 +5,5 @@
     background-image: url(../../assets/images/gray-curve.svg);
     display: block;
     width: 100%; 
-    padding-bottom: 8%; 
+    padding-bottom: 9%; 
 }
